# MfG

./: .gitignore  CMakeLists.txt  README.md
ginterface/: главный.goida
include/: mfg.hpp
src/: mfg.cpp
tests/: test.cpp
